--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-native-community/datetimepicker": "^8.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native": "^7.1.12",
     "axios": "^1.9.0",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
@@ -27,9 +27,9 @@
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.6",
-    "expo-splash-screen": "~0.30.8",
+    "expo-splash-screen": "^0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
+    "expo-symbols": "^0.4.5",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
     "jwt-decode": "^4.0.0",
